--- a/project/complaintsapp/templates/base.html
+++ b/project/complaintsapp/templates/base.html
@@ -11,7 +11,33 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Chalkstone Council</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="submit_complaint">Submit an Issue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">See Issues</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Staff Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container mt-4">
+        {% block content %}{% endblock %}
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
