--- a/project/complaintsapp/templates/base.html
+++ b/project/complaintsapp/templates/base.html
@@ -14,20 +14,22 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Chalkstone Council</a>
+            <a class="navbar-brand" href="{% url 'home'%}">Chalkstone Council</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="submit_complaint">Submit an Issue</a>
+                        <a class="nav-link" href="{% url 'submit_complaint' %}">Submit an Issue</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">See Issues</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Staff Login</a>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="nav-link" href="{% url 'staff_login' %}">Staff Login</a>
                     </li>
                 </ul>
             </div>
